--- a/templates/footer.html.twig
+++ b/templates/footer.html.twig
@@ -58,7 +58,7 @@
             <div class="inner-container">
                 <p>© Copyright 2024 ArtHub. All Rights Reserved</p>
                 <a href="#" class="site-footer__bottom-logo">
-                    <img src="{{ asset('images/logo-footer-1.png') }}" alt="">
+                    <img src="{{asset('images/test.png')}}"" width="120" height="100"alt="">
                 </a>
                 <div class="site-footer__bottom-links">
                     <a href="#">Terms & conditions</a>
