--- a/templates/ClientHome/header.html.twig
+++ b/templates/ClientHome/header.html.twig
@@ -13,7 +13,8 @@
                 <div class="topbar-one__right">
                     <a href="#"><i class="far fa-clock"></i> Mon - Sat 9.00 - 18.00</a>
                     <a href="#"><i class="fa fa-phone-alt"></i> (+216) 71 258 698</a>
-                    <a href="#" class="thm-btn topbar__btn">Sign In</a><!-- /.thm-btn -->
+                    <a href="#" class="thm-btn topbar__btn">Profile 
+                    </a><!-- /.thm-btn -->
                 </div><!-- /.topbar-one__right -->
             </div><!-- /.container -->
         </div><!-- /.topbar-one -->
@@ -30,28 +31,28 @@
                     <div class="main-nav__main-navigation">
                         <ul class="main-nav__navigation-box">
                             <li>
-                                <a href="#">Home</a>
+                                <a href="{{ path('app_client_home') }}">Home</a>
                             </li>
                             <li class="dropdown">
                                 <a href="#">About</a>
                                 <ul>
                                     <li><a href="#">About Us</a></li>
                                     <li><a href="#">Team</a></li>
-                                    <li><a href="#">Veneu</a></li>
+                                    
                                     <li><a href="#">FAQ</a></li>
                                 </ul>
                             <button class="dropdown-btn"><i class="fa fa-angle-right"></i></button></li>
                             <li >
-                                <a href="#">Collections</a>
+                                <a href="{{ path('app_client_collection') }}">Collections</a>
                                </li>
                             <li class="dropdown current">
                                 <a href="#">Explore</a>
                                 <ul>
                                     <li>
-                                        <a href="#">Events</a>
+                                        <a href="{{ path('app_client_event') }}">Events</a>
                                     </li>
-                                    <li><a href="#">MasterClass</a></li>
-                                    <li><a href="#">Activities</a></li>
+                                    <li><a href="app_client_masterclass">MasterClass</a></li>
+                                    <li><a href="{{ path('app_client_activity') }}">Activities</a></li>
                                     
                                 </ul>
                             <button class="dropdown-btn"><i class="fa fa-angle-right"></i></button></li>
@@ -87,9 +88,7 @@
                                 <ul>
                                     <li><a href="#">About Us</a></li>
                                     <li><a href="#">Team</a></li>
-                                    <li><a href="#">Veneu</a></li>
-                                    <li><a href="#">FAQ</a></li>
-                                    <li><a href="#">Membership</a></li>
+                                    <li><a href="#">FAQ</a></li> 
                                 </ul>
                             <button class="dropdown-btn"><i class="fa fa-angle-right"></i></button></li>
                             <li >
