--- a/templates/evenements/new.html.twig
+++ b/templates/evenements/new.html.twig
@@ -1,6 +1,6 @@
 {% extends 'baseAdmin.html.twig' %}
 
-{% block title %}New Evenements{% endblock %}
+{% block title %}New Event{% endblock %}
 
 {% block body %}
     <h1>Create new Event</h1>
