--- a/templates/baseAdmin.html.twig
+++ b/templates/baseAdmin.html.twig
@@ -23,6 +23,7 @@
 
     <!-- CSS Files -->
     <link id="pagestyle" href="{{asset('adminDash/css/argon-dashboard.css?v=2.0.4')}}" rel="stylesheet" />
+   
     {% endblock %}
 </head>
 <body class="g-sidenav-show   bg-gray-100">
@@ -67,6 +68,14 @@
           <h6 class="ps-4 ms-2 text-uppercase text-xs font-weight-bolder opacity-6">others</h6>
         </li>
         <li class="nav-item">
+            <a class="nav-link {{ app.request.attributes.get('_route') == 'app_evenements_index' ? 'active' : '' }} " href="{{ path('app_evenements_index')}}">
+              <div class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
+                <i class="ni ni-calendar-grid-58 text-warning text-sm opacity-10"></i>
+              </div>
+              <span class="nav-link-text ms-1">Events</span>
+            </a>
+        </li>
+        <li class="nav-item">
             <a class="nav-link " href="">
                 <div class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
                     <i class="ni ni-app text-info text-sm opacity-10"></i>
@@ -79,24 +88,17 @@
                 <div class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
                     <i class="ni ni-credit-card text-success text-sm opacity-10"></i>
                 </div>
-              <span class="nav-link-text ms-1">ArtWork</span>
+              <span class="nav-link-text ms-1">ArtWorks</span>
             </a>
         </li>
-        <li class="nav-item">
-            <a class="nav-link " href="">
-              <div class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
-                <i class="ni ni-calendar-grid-58 text-warning text-sm opacity-10"></i>
-              </div>
-              <span class="nav-link-text ms-1">Events</span>
-            </a>
-        </li>
+        
         
         <li class="nav-item">
             <a class="nav-link " href="">
                 <div class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
                     <i class="ni ni-collection text-info text-sm opacity-10"></i>
                 </div>
-              <span class="nav-link-text ms-1">MasterClass</span>
+              <span class="nav-link-text ms-1">MasterClasses</span>
             </a>
         </li>
       </ul>
@@ -153,7 +155,7 @@
                   document.write(new Date().getFullYear())
                 </script>,
                 made with <i class="fa fa-heart"></i> by
-                <a href="#" class="font-weight-bold" target="_blank">Software Spartens</a>
+                <a href="#" class="font-weight-bold" target="_blank">Software Spartans</a>
                 for a better web.
               </div>
             </div>
