--- a/templates/evenements/new.html.twig
+++ b/templates/evenements/new.html.twig
@@ -3,9 +3,19 @@
 {% block title %}New Event{% endblock %}
 
 {% block body %}
-    <h1>Create new Event</h1>
-
-    {{ include('evenements/_form.html.twig') }}
-
-    <a href="{{ path('app_evenements_index') }}">back to list</a>
+<div class="container-fluid py-4">
+    <div class="row">
+        <div class="col-12">
+            <div class="card mb-4">
+                <div class="card-header pb-0">
+                    <h6>Create New Event</h6>
+                </div>
+                <div class="card-body px-0 pt-0 pb-2">
+                    {{ include('evenements/_form.html.twig') }}
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<a href="{{ path('app_evenements_index') }}" class="btn btn-primary"style="margin-left: 30px;">Back to list</a>
 {% endblock %}
