--- a/templates/evenements/index.html.twig
+++ b/templates/evenements/index.html.twig
@@ -26,6 +26,8 @@
                                     <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Description</th>
                                     <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Places</th>
                                     <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Participants</th>
+                                    <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">image url</th>
+                                    <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">video url</th>
                                     <th class="text-secondary opacity-7"></th>
                                 </tr>
                             </thead>
@@ -41,6 +43,8 @@
                                     <td class="align-middle text-center">{{ evenement.description }}</td>
                                     <td class="align-middle text-center">{{ evenement.nombreplaces }}</td>
                                     <td class="align-middle text-center">{{ evenement.nombreparticipants }}</td>
+                                    <td class="align-middle text-center">{{ evenement.posterurl }}</td>
+                                    <td class="align-middle text-center">{{ evenement.videourl }}</td>
                                     <td class="align-middle">
                                         <a href="{{ path('app_evenements_show', {'id': evenement.id}) }}" class="text-secondary font-weight-bold text-xs" data-toggle="tooltip" data-original-title="View event">
                                             View
