--- a/templates/baseAdmin.html.twig
+++ b/templates/baseAdmin.html.twig
@@ -25,7 +25,7 @@
     <link id="pagestyle" href="{{asset('adminDash/css/argon-dashboard.css?v=2.0.4')}}" rel="stylesheet" />
    
    <!-- Bootstrap Datepicker CSS -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker.min.css" rel="stylesheet">
+   {# matmisch <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker.min.css" rel="stylesheet"> #}
 
     {% endblock %}
 </head>
@@ -166,7 +166,8 @@
         </div>
       </footer>
   </main>
-      <!-- jQuery (Necessary for Bootstrap's JavaScript plugins and Datepicker) -->
+     {# matmis hat chay 
+     <!-- jQuery (Necessary for Bootstrap's JavaScript plugins and Datepicker) added by me -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script>
     $(document).ready(function() {
@@ -179,8 +180,8 @@
     });
 </script>
 
-<!-- Bootstrap Datepicker JS -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"></script>
+<!-- Bootstrap Datepicker JS added by me-->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"></script> #}
 </body>
 </html>
 
