added view both user table and articles alsoa added tempaltes for login and signup still logique not working but its okay

--- a/templates/ClientHome/header.html.twig
+++ b/templates/ClientHome/header.html.twig
@@ -24,7 +24,7 @@
                 <div class="inner-container">
                     <div class="logo-box">
                         <a href="#">
-                            <img src="{{asset('images/test.png')}}" alt="" height="88" width="100">
+                            <img src="{{asset('clientHome/images/logo.png')}}" alt="" height="88" width="100">
                         </a>
                         <a href="#" class="side-menu__toggler"><i class="muzex-icon-menu"></i></a>
                     </div><!-- /.logo-box -->
