--- a/templates/ClientHome/index.html.twig
+++ b/templates/ClientHome/index.html.twig
@@ -69,7 +69,7 @@
 								</button>
 							</li>
 							<li>
-								<a href="{{ path('app_client_blog') }}">Blog</a>
+								<a href="">Blog</a>
 							</li>
 							<li>
 								<a href="{{ path('app_client_contact') }}">Contact</a>
