--- a/templates/AdminDash/UserManagement/users.html.twig
+++ b/templates/AdminDash/UserManagement/users.html.twig
@@ -2,7 +2,8 @@
 {% block title %}
 	ArtHub - Users
 {% endblock %}
-{% block page_name %}Users{% endblock %}
+{% block page_name %}Users
+{% endblock %}
 {% block body %}
 	<div class="container-fluid py-4">
 		<div class="row">
@@ -17,186 +18,55 @@
 								<thead>
 									<tr>
 										<th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">User</th>
-										<th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Role</th>
-										<th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Status</th>
+										<th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Pseudo/gender</th>
+										<th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Role</th>
 										<th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Joined</th>
 										<th class="text-secondary opacity-7"></th>
 									</tr>
 								</thead>
 								<tbody>
-									<tr>
-										<td>
-											<div class="d-flex px-2 py-1">
-												<div>
-													<img src="../assets/img/team-2.jpg" class="avatar avatar-sm me-3" alt="user1">
+									{% for user in users %}
+										<tr>
+											<td>
+												<div class="d-flex px-2 py-1">
+													<div>
+														<img src="{{ user.urlImageProfil ? asset(user.urlImageProfil) : asset('path/to/default/image.jpg') }}" class="avatar avatar-sm me-3" alt="{{ user.prenom }}">
+
+													</div>
+													<div class="d-flex flex-column justify-content-center">
+														<h6 class="mb-0 text-sm">{{ user.nom ~' '~ user.prenom  }}</h6>
+														<p class="text-xs text-secondary mb-0">{{ user.email }}</p>
+													</div>
 												</div>
-												<div class="d-flex flex-column justify-content-center">
-													<h6 class="mb-0 text-sm">John Michael</h6>
-													<p class="text-xs text-secondary mb-0">john@creative-tim.com</p>
-												</div>
-											</div>
-										</td>
-										<td>
-											<p class="text-xs font-weight-bold mb-0">Manager</p>
-											<p class="text-xs text-secondary mb-0">Organization</p>
-										</td>
-										<td class="align-middle text-center text-sm">
-											<span class="badge badge-sm bg-gradient-success">Online</span>
-										</td>
-										<td class="align-middle text-center">
-											<span class="text-secondary text-xs font-weight-bold">23/04/18</span>
-										</td>
-										<td class="align-middle">
-											<a href="javascript:;" class="text-secondary font-weight-bold text-xs" data-toggle="tooltip" data-original-title="Edit user">
-												Edit
-											</a>
-										</td>
-									</tr>
-									<tr>
-										<td>
-											<div class="d-flex px-2 py-1">
-												<div>
-													<img src="../assets/img/team-3.jpg" class="avatar avatar-sm me-3" alt="user2">
-												</div>
-												<div class="d-flex flex-column justify-content-center">
-													<h6 class="mb-0 text-sm">Alexa Liras</h6>
-													<p class="text-xs text-secondary mb-0">alexa@creative-tim.com</p>
-												</div>
-											</div>
-										</td>
-										<td>
-											<p class="text-xs font-weight-bold mb-0">Programator</p>
-											<p class="text-xs text-secondary mb-0">Developer</p>
-										</td>
-										<td class="align-middle text-center text-sm">
-											<span class="badge badge-sm bg-gradient-secondary">Offline</span>
-										</td>
-										<td class="align-middle text-center">
-											<span class="text-secondary text-xs font-weight-bold">11/01/19</span>
-										</td>
-										<td class="align-middle">
-											<a href="javascript:;" class="text-secondary font-weight-bold text-xs" data-toggle="tooltip" data-original-title="Edit user">
-												Edit
-											</a>
-										</td>
-									</tr>
-									<tr>
-										<td>
-											<div class="d-flex px-2 py-1">
-												<div>
-													<img src="../assets/img/team-4.jpg" class="avatar avatar-sm me-3" alt="user3">
-												</div>
-												<div class="d-flex flex-column justify-content-center">
-													<h6 class="mb-0 text-sm">Laurent Perrier</h6>
-													<p class="text-xs text-secondary mb-0">laurent@creative-tim.com</p>
-												</div>
-											</div>
-										</td>
-										<td>
-											<p class="text-xs font-weight-bold mb-0">Executive</p>
-											<p class="text-xs text-secondary mb-0">Projects</p>
-										</td>
-										<td class="align-middle text-center text-sm">
-											<span class="badge badge-sm bg-gradient-success">Online</span>
-										</td>
-										<td class="align-middle text-center">
-											<span class="text-secondary text-xs font-weight-bold">19/09/17</span>
-										</td>
-										<td class="align-middle">
-											<a href="javascript:;" class="text-secondary font-weight-bold text-xs" data-toggle="tooltip" data-original-title="Edit user">
-												Edit
-											</a>
-										</td>
-									</tr>
-									<tr>
-										<td>
-											<div class="d-flex px-2 py-1">
-												<div>
-													<img src="../assets/img/team-3.jpg" class="avatar avatar-sm me-3" alt="user4">
-												</div>
-												<div class="d-flex flex-column justify-content-center">
-													<h6 class="mb-0 text-sm">Michael Levi</h6>
-													<p class="text-xs text-secondary mb-0">michael@creative-tim.com</p>
-												</div>
-											</div>
-										</td>
-										<td>
-											<p class="text-xs font-weight-bold mb-0">Programator</p>
-											<p class="text-xs text-secondary mb-0">Developer</p>
-										</td>
-										<td class="align-middle text-center text-sm">
-											<span class="badge badge-sm bg-gradient-success">Online</span>
-										</td>
-										<td class="align-middle text-center">
-											<span class="text-secondary text-xs font-weight-bold">24/12/08</span>
-										</td>
-										<td class="align-middle">
-											<a href="javascript:;" class="text-secondary font-weight-bold text-xs" data-toggle="tooltip" data-original-title="Edit user">
-												Edit
-											</a>
-										</td>
-									</tr>
-									<tr>
-										<td>
-											<div class="d-flex px-2 py-1">
-												<div>
-													<img src="../assets/img/team-2.jpg" class="avatar avatar-sm me-3" alt="user5">
-												</div>
-												<div class="d-flex flex-column justify-content-center">
-													<h6 class="mb-0 text-sm">Richard Gran</h6>
-													<p class="text-xs text-secondary mb-0">richard@creative-tim.com</p>
-												</div>
-											</div>
-										</td>
-										<td>
-											<p class="text-xs font-weight-bold mb-0">Manager</p>
-											<p class="text-xs text-secondary mb-0">Executive</p>
-										</td>
-										<td class="align-middle text-center text-sm">
-											<span class="badge badge-sm bg-gradient-secondary">Offline</span>
-										</td>
-										<td class="align-middle text-center">
-											<span class="text-secondary text-xs font-weight-bold">04/10/21</span>
-										</td>
-										<td class="align-middle">
-											<a href="javascript:;" class="text-secondary font-weight-bold text-xs" data-toggle="tooltip" data-original-title="Edit user">
-												Edit
-											</a>
-										</td>
-									</tr>
-									<tr>
-										<td>
-											<div class="d-flex px-2 py-1">
-												<div>
-													<img src="../assets/img/team-4.jpg" class="avatar avatar-sm me-3" alt="user6">
-												</div>
-												<div class="d-flex flex-column justify-content-center">
-													<h6 class="mb-0 text-sm">Miriam Eric</h6>
-													<p class="text-xs text-secondary mb-0">miriam@creative-tim.com</p>
-												</div>
-											</div>
-										</td>
-										<td>
-											<p class="text-xs font-weight-bold mb-0">Programtor</p>
-											<p class="text-xs text-secondary mb-0">Developer</p>
-										</td>
-										<td class="align-middle text-center text-sm">
-											<span class="badge badge-sm bg-gradient-secondary">Offline</span>
-										</td>
-										<td class="align-middle text-center">
-											<span class="text-secondary text-xs font-weight-bold">14/09/20</span>
-										</td>
-										<td class="align-middle">
-											<a href="javascript:;" class="text-secondary font-weight-bold text-xs" data-toggle="tooltip" data-original-title="Edit user">
-												Edit
-											</a>
-										</td>
-									</tr>
+											</td>
+											<td>
+												<p class="text-xs font-weight-bold mb-0">{{ user.pseudo}}</p>
+												<p class="text-xs text-secondary mb-0">{{ user.gender }}</p>
+											</td>
+											<td class="align-middle text-center text-sm">
+
+												{% if user.role == 'admin' %}
+													<span class="badge badge-sm bg-gradient-secondary">{{ user.role }}</span>
+												{% else %}
+													<span class="badge badge-sm bg-gradient-success">{{ user.role }}</span>
+												{% endif %}
+
+											</td>
+											<td class="align-middle text-center">
+												<span class="text-secondary text-xs font-weight-bold">{{ user.dateInscription|date('Y-m-d ') }}</span>
+											</td>
+											<td class="align-middle">
+												<a href="javascript:;" class="text-secondary font-weight-bold text-xs" data-toggle="tooltip" data-original-title="Edit user">
+													Ban
+												</a>
+											</td>
+										</tr>
+									{% endfor %}
 								</tbody>
 							</table>
 						</div>
+					</div>
 				</div>
 			</div>
 		</div>
-	</div>
-{% endblock %}
+	{% endblock %}
