--- a/templates/baseAdmin.html.twig
+++ b/templates/baseAdmin.html.twig
@@ -134,7 +134,7 @@
                 </a>
               </li>
               <li class="nav-item  pe-2 d-flex align-items-center">
-                <a href="{{ path('app_login', {'email': "joe@example.com"}) }}" class="nav-link text-white p-0">
+                <a href="{{ path('app_logout') }}" class="nav-link text-white p-0">
                     <i class="fa fa-sign-out-alt fixed-plugin-button-nav cursor-pointer"></i> 
                 </a>
             </li>
