clean up some code for the login and signup forms

--- a/templates/AdminDash/UserManagement/profile.html.twig
+++ b/templates/AdminDash/UserManagement/profile.html.twig
@@ -15,7 +15,7 @@
 							<!-- Image acts as the 'button' to upload -->
 							<label for="profile_image" style="cursor: pointer; position: relative;">
 								<img
-								src="{{ asset('adminDash/img/imageprofile.jpg') }}" alt="profile_image" class="w-100 border-radius-lg shadow-sm">
+								src="{{ asset(app.user.urlImageProfil) }}" alt="profile_image" class="w-100 border-radius-lg shadow-sm">
 								<!-- Edit icon -->
 								<i class="bi bi-pencil-square text-primary edit-icon" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); font-size: 24px; display: none;"></i>
 							</label>
@@ -24,8 +24,8 @@
 				</div>
 				<div class="col-auto my-auto">
 					<div class="h-100">
-						<h5 class="mb-1">Sayo Kravits</h5>
-						<p class="mb-0 font-weight-bold text-sm">Public Relations</p>
+						<h5 class="mb-1">{{app.user.prenom}}  {{app.user.nom}}</h5>
+						<p class="mb-0 font-weight-bold text-sm">{{app.user.pseudo}}</p>
 					</div>
 				</div>
 			</div>
@@ -65,7 +65,7 @@
 					<div class="card-header pb-0">
 						<div class="d-flex align-items-center">
 							<p class="mb-0">Edit Profile</p>
-							<button class="btn btn-primary btn-sm ms-auto">Settings</button>
+							<button class="btn btn-primary btn-sm ms-auto">  Save  </button>
 						</div>
 					</div>
 					<div class="card-body">
@@ -74,25 +74,25 @@
 							<div class="col-md-6">
 								<div class="form-group">
 									<label class="form-control-label">Username</label>
-									<input class="form-control" type="text" value="lucky.jesse">
+									<input class="form-control" type="text" value="{{app.user.pseudo}}">
 								</div>
 							</div>
 							<div class="col-md-6">
 								<div class="form-group">
 									<label class="form-control-label">Email address</label>
-									<input class="form-control" type="email" value="jesse@example.com">
+									<input class="form-control" type="email" value="{{app.user.email}}">
 								</div>
 							</div>
 							<div class="col-md-6">
 								<div class="form-group">
 									<label class="form-control-label">First name</label>
-									<input class="form-control" type="text" value="Jesse">
+									<input class="form-control" type="text" value="{{app.user.prenom}}">
 								</div>
 							</div>
 							<div class="col-md-6">
 								<div class="form-group">
 									<label class="form-control-label">Last name</label>
-									<input class="form-control" type="text" value="Lucky">
+									<input class="form-control" type="text" value="{{app.user.nom}}">
 								</div>
 							</div>
 							<div class="col-md-6">
@@ -133,7 +133,7 @@
 											<option data-countrycode="AE" value="971">🇦🇪 United Arab Emirates +971</option>
 											<option data-countrycode="US" value="1">🇺🇸 USA +1</option>
 										</select>
-										<input class="form-control" type="text" style="width: 60%; margin-right: 3%;" placeholder="Enter your phone number">
+										<input class="form-control" type="text" style="width: 60%; margin-right: 3%;" placeholder="{{app.user.phoneNumber}}">
 									</div>
 								</div>
 
@@ -201,10 +201,10 @@
 						</div>
 						<hr class="horizontal dark">
 						<p class="text-uppercase text-sm">Delete Account</p>
-						<p>Please note: Deleting your account is an irreversible action.
-																												                         It will result in the permanent loss of your account data, settings, and content. 
-																												                         This action cannot be undone. 
-																												                         Please ensure you have backed up any important information you wish to retain before proceeding.</p>
+						<p>Please note: <br>Deleting your account is an irreversible action.
+							 It will result in the permanent loss of your account data, settings, and content. 
+						     This action cannot be undone. <br>
+						     Please ensure you have backed up any important information you wish to retain before proceeding.</p>
 						<div class="form-group">
 							<button class="btn btn-danger" onclick="confirmAccountDeletion()">Delete Account</button>
 						</div>
