--- a/templates/baseAdmin.html.twig
+++ b/templates/baseAdmin.html.twig
@@ -115,7 +115,9 @@
             </li>
             <li class="breadcrumb-item text-sm text-white active" aria-current="page">Dashboard</li>
           </ol>
-          <h6 class="font-weight-bolder text-white mb-0">Dashboard</h6>
+          <h6 class="font-weight-bolder text-white mb-0">Dashboard  {% if app.user %}
+    <p>Welcome, {{ app.user.nom}}!</p>
+{% endif %}</h6>
         </nav>
         <div class="collapse navbar-collapse mt-sm-0 mt-2 me-md-0 me-sm-4" id="navbar">
           <div class="ms-md-auto pe-md-3 d-flex align-items-center">
@@ -123,7 +125,7 @@
           </div>
           <ul class="navbar-nav  justify-content-end">
             <li class="nav-item d-flex align-items-center">
-              <a href="{{ path('app_profile', {'pseudo': "pseudo2"}) }}" class="nav-link text-white font-weight-bold px-0">
+              <a href="{{ path('app_profile', {'pseudo': app.user.pseudo}) }}" class="nav-link text-white font-weight-bold px-0">
                 <i class="fa fa-user me-sm-1"></i>
                 <span class="d-sm-inline d-none">Profile</span>
               </a>
