added new images column in articles

--- a/templates/ClientHome/BlogManagement/add-article.html.twig
+++ b/templates/ClientHome/BlogManagement/add-article.html.twig
@@ -38,18 +38,13 @@
                         <form action="assets/inc/sendemail.php" class="contact-form-validated contact-one__form">
                             <div class="row">
                                 <div class="col-lg-6">
-                                    <input type="text" placeholder="Your Name*">
+                                    <input type="text" placeholder="Gategories">
                                 </div><!-- /.col-lg-6 -->
                                 <div class="col-lg-6">
-                                    <input type="text" placeholder="Your Email*">
-                                </div><!-- /.col-lg-6 -->
-                                <div class="col-lg-6">
-                                    <input type="text" placeholder="Subject">
-                                </div><!-- /.col-lg-6 -->
-                                <div class="col-lg-6">
+
                                     <select class="selectpicker">
-                                        <option value="#">Discuss For</option>
-                                        <option value="General Query">General Query</option>
+                                        <option value="#">Gategories</option>
+                                        <option value="General Query">Education</option>
                                         <option value="For Ticketing">For Ticketing</option>
                                         <option value="For Membership">For Membership</option>
                                     </select><!-- /#.selectpicker -->
