updated the views of the articles

--- a/templates/ClientHome/BlogManagement/article-details.html.twig
+++ b/templates/ClientHome/BlogManagement/article-details.html.twig
@@ -11,7 +11,7 @@
                     <div class="col-lg-8">
                         <div class="blog-details__main">
                             <div class="blog-details__image">
-                                <img src="" class="img-fluid" alt="">
+                                <img src="{{asset(article.imagePath)}}" class="img-fluid" alt="">
                             </div><!-- /.blog-details__image -->
                             <ul class="blog-one__meta list-unstyled">
                                 <li><a href="#">By {{ article.utilisateur.pseudo }}</a></li>
