--- a/templates/ClientHome/BlogManagement/articles-list.html.twig
+++ b/templates/ClientHome/BlogManagement/articles-list.html.twig
@@ -14,7 +14,7 @@
 							{% for article in articles %}
 								<div class="blog-one__single">
 									<div class="blog-one__image">
-										<img src="assets/images/blog/blog-s-1.jpg" alt="">
+										<img src="{{asset(article.imagePath)}}" alt="">
 									</div>
 									<!-- /.blog-one__image -->
 									<div class="blog-one__content">
